added the form validation logic

--- a/index.html
+++ b/index.html
@@ -28,25 +28,36 @@
       <div class="">
         <div class="hero-content flex-col lg:flex-row-reverse">
           <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
-            <div class="card-body">
+            <form class="card-body">
               <fieldset class="fieldset">
                 <label class="fieldset-label">Account Number</label>
                 <input
+                  id="account-number"
                   type="number"
                   class="input"
                   placeholder="Type Your Number"
+                  value="12312312312"
+                  required
                 />
                 <label class="fieldset-label">PIN</label>
-                <input type="text" class="input" placeholder="Type Your PIN" />
+                <input
+                  id="pin"
+                  type="text"
+                  class="input"
+                  placeholder="Type Your PIN"
+                  value="1234"
+                  required
+                />
                 <div><a class="link link-hover">Forgot password?</a></div>
                 <button id="login-btn" class="btn btn-neutral mt-4">
                   Login
                 </button>
               </fieldset>
-            </div>
+            </form>
           </div>
         </div>
       </div>
     </section>
+    <script src="script/login.js"></script>
   </body>
 </html>
