edited the cashout amount logic

--- a/main.html
+++ b/main.html
@@ -158,7 +158,7 @@
               />
               <label class="fieldset-label">Amount</label>
               <input
-                id="amount"
+                id="cash-out-amount"
                 type="number"
                 class="input"
                 placeholder="Type Your Amount"
@@ -166,7 +166,7 @@
               />
               <label class="fieldset-label">PIN</label>
               <input
-                id="pin"
+                id="cash-out-pin"
                 type="text"
                 class="input"
                 placeholder="Type Your PIN"
@@ -175,7 +175,7 @@
               />
               <div><a class="link link-hover">Forgot password?</a></div>
               <button
-                id="add-money-btn"
+                id="cash-out-btn"
                 class="btn btn-neutral mt-4 rounded-3xl bg-[#0874F2] border-none"
               >
                 Cash Out
@@ -187,5 +187,6 @@
     </section>
     <script src="script/addMoney.js"></script>
     <script src="script/toggle.js"></script>
+    <script src="script/cashout.js"></script>
   </body>
 </html>
