--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Payoo</title>
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@5.0.0-beta.8/daisyui.css"
       rel="stylesheet"
@@ -34,7 +34,7 @@
 
           <!-- Card Container -->
           <div class="cards grid grid-cols-3 mt-14 gap-2 p-2">
-            <!-- Box-1 -->
+            <!-- Add Money Box -->
             <div
               id="add-money-box"
               class="box border border-[#0808081A] py-5 px-2 text-center rounded-xl cursor-pointer"
@@ -43,7 +43,7 @@
               <h3>Add Money</h3>
             </div>
 
-            <!-- Box-2 -->
+            <!-- Cash Out Box -->
             <div
               id="cash-out-box"
               class="box border border-[#0808081A] py-5 px-2 text-center rounded-xl cursor-pointer"
@@ -52,7 +52,7 @@
               <h3>Cash Out</h3>
             </div>
 
-            <!-- Box-3 -->
+            <!-- Transfer Money Box -->
             <div
               class="box border border-[#0808081A] py-5 px-2 text-center rounded-xl cursor-pointer"
             >
@@ -60,7 +60,7 @@
               <h3>Transfer Money</h3>
             </div>
 
-            <!-- Box-4 -->
+            <!-- Get Bonus Box -->
             <div
               class="box border border-[#0808081A] py-5 px-2 text-center rounded-xl cursor-pointer"
             >
@@ -68,7 +68,7 @@
               <h3>Get Bonus</h3>
             </div>
 
-            <!-- Box-5 -->
+            <!-- Pay Bill Box -->
             <div
               class="box border border-[#0808081A] py-5 px-2 text-center rounded-xl cursor-pointer"
             >
@@ -76,7 +76,7 @@
               <h3>Pay Bill</h3>
             </div>
 
-            <!-- Box-6 -->
+            <!-- Transaction Box -->
             <div
               class="box border border-[#0808081A] py-5 px-2 text-center rounded-xl cursor-pointer"
             >
@@ -130,6 +130,8 @@
                         required
                       />
                       <div><a class="link link-hover">Forgot password?</a></div>
+
+                      <!-- Add Money Button -->
                       <button
                         id="add-money-btn"
                         class="btn btn-neutral mt-4 rounded-3xl bg-[#0874F2] border-none"
@@ -185,7 +187,9 @@
         </section>
       </header>
     </section>
-    <script src="script/addMoney.js"></script>
+    <script src="utilities/utilites.js"></script>
+    <!-- <script src="script/addMoney.js"></script> -->
+    <script src="script/addMoneyShort.js"></script>
     <script src="script/toggle.js"></script>
     <script src="script/cashout.js"></script>
   </body>
