--- a/main.html
+++ b/main.html
@@ -190,7 +190,9 @@
     <script src="utilities/utilites.js"></script>
     <!-- <script src="script/addMoney.js"></script> -->
     <script src="script/addMoneyShort.js"></script>
-    <script src="script/toggle.js"></script>
+    <!-- <script src="script/toggle.js"></script> -->
+    <script src="utilities/toggleUtility.js"></script>
     <script src="script/cashout.js"></script>
+    <!-- <script src="utilities/cashoutUtility.js"></script> -->
   </body>
 </html>
